<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_dark"
        tools:context=".View.Activity.ChangePasswordActivity">

        <include
            android:id="@+id/toolBar"
            layout="@layout/layout_toolbar_back" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:paddingBottom="15dp"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/old_password"
                android:textColor="@color/grey_ppi"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtOldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvOldPassword"
                app:layout_constraintStart_toStartOf="parent"
                android:textCursorDrawable="@drawable/color_cursor"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColor="@color/grey_ppi"
                android:maxLength="10"
                android:padding="10dp"
                android:background="@drawable/focus_drawable_change"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorOldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edtOldPassword"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="2dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/old_password_is_required"
                android:textSize="12dp"
                android:textColor="@color/red"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/new_password"
                android:textColor="@color/grey_ppi"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvErrorOldPassword"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvNewPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColor="@color/grey_ppi"
                android:textCursorDrawable="@drawable/color_cursor"
                android:maxLength="10"
                android:padding="10dp"
                android:background="@drawable/focus_drawable_change"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edtNewPassword"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="2dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/new_password_is_required"
                android:textSize="12dp"
                android:textColor="@color/red"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/confirm_password"
                android:textColor="@color/grey_ppi"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvErrorNewPassword"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textCursorDrawable="@drawable/color_cursor"
                android:layout_marginTop="8dp"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:textColor="@color/grey_ppi"
                android:maxLength="10"
                android:padding="10dp"
                android:background="@drawable/focus_drawable_change"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edtConfirmPassword"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="2dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/new_password_and_confirm_paasword_not_macth"
                android:textSize="12dp"
                android:textColor="@color/red"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
