<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inset_drawable"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:textSize="22dp"
            app:fontFamily="@font/poppinssemibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number_registered_with_paypoint"
            android:textColor="@color/grey_ppi"
            android:textSize="15dp"
            app:fontFamily="@font/poppinsregular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtMobileNUmber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/focus_drawable_change"
            android:hint="@string/mobile_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="10dp"
            android:maxLength="10"
            android:singleLine="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvmsg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvErrorMesg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edtMobileNUmber"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="2dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/please_enter_valid_mobile_number"
            android:textSize="12dp"
            android:textColor="@color/red"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@color/light_step"
            app:layout_constraintTop_toBottomOf="@id/tvErrorMesg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCamcel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Cancel"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/main_blue"
            app:fontFamily="@font/poppinssemibold"
            app:layout_constraintEnd_toStartOf="@id/center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContinues"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Continue"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/main_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:fontFamily="@font/poppinssemibold"
            app:layout_constraintStart_toEndOf="@id/center"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <View
            android:id="@+id/viewCneter"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/light_step"
            app:layout_constraintStart_toStartOf="@id/center"
            app:layout_constraintTop_toBottomOf="@id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
